--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ $(document).ready(function()
 </head>
 <body style="background-color: #D0EEEE">
 
-<center><!--<h1>Please select a class:</h1>-->
+<center><!--<h1>Please sele2ct a class:</h1>-->
 <div class="row">
   <div class="column">
     <a href="hero/"><img id="hero" src="images/hero_comp.gif" alt="Hero" style="width:100%" /></a>
