--- a/index.html
+++ b/index.html
@@ -1,98 +1,81 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Select a class!</title>
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script type="text/javascript">
-$(document).ready(function()
-{
-    $("#hero").hover(
-        function()
-        {
-            $(this).attr("src", "images/hero_comp.gif");
-        },
-        function()
-        {
-            $(this).attr("src", "images/hero_comp.png");
-        }                         
-    );           
-    $("#phantom").hover(
-        function()
-        {
-            $(this).attr("src", "images/phantom_comp.gif");
-        },
-        function()
-        {
-            $(this).attr("src", "images/phantom_comp.png");
-        }                         
-    );           
-    $("#etoile").hover(
-        function()
-        {
-            $(this).attr("src", "images/etoile_comp.gif");
-        },
-        function()
-        {
-            $(this).attr("src", "images/etoile_comp.png");
-        }                         
-    );           	
-});
-</script>
-
-</head>
-<body>
-
-</head>
-<body style="background-color: #D0EEEE">
-
-<center><!--<h1>Please sele2ct a class:</h1>-->
-<div class="row">
-  <div class="column">
-    <a href="hero/"><img id="hero" src="images/hero_comp.gif" alt="Hero" style="width:100%" /></a>
-	<h3>Hero is a scion class skilled at engaging multiple enemies at once. Heroes can wield three types of weapons: Swords, Twin Machine Guns, and Talises.</h3>
-	
-  </div>
-  <div class="column">
-    <a href="phantom/"><img id="phantom" src="images/phantom_comp.gif" alt="Phantom" style="width:100%"></a>
-	<h3>Phantom is a scion class which features both a wide array of different attacks as well as superior dodging ability. The class is capable of equipping three different weapons types: Rod, Katana, and Rifle.</h3>
-  </div>
-  <div class="column">
-    <a href="etoile/"><img id="etoile" src="images/etoile_comp.gif" alt="Etoile" style="width:100%"></a>
-	<h3>Etoile is a scion class specializing in defense and support skills. They are capable of equipping Double Sabers, Soaring Blades, and Wands.</h3>
-  </div>
-</div>
-<div class="row">
-  <div class="column">
-  <img src="images/Left.png" alt="Don't click me!" style="width:100%">
-  </div>
-  <div class="column" style="float:center; !important;">
-    <a href="luster/"><img id="luster" src="images/Luster.png" alt="Luster" style="width:100%"></a>
-	<h3>Luster is an inherently agressive class with it's own unique mechanics, and a bit complicated and different from the other classes. It uses only Gunblades, but 3 different styles/types. <A HREF="https://www.pixiv.net/en/artworks/85641860">(Original artwork can be found here)</A></h3>
-  </div>
-  <div class="column">
-  <a href="http://discord.gg/PSO2"><img src="images/Right.png" alt="You can click me, though!" style="width:100%"></a>
-  </div>
-</div>
-</center>
-</body>
+<html lang=en>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Select a class!</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+		<link href="./css/style.css" rel="stylesheet">
+	</head>
+	<body>
+		<noscript>Your browser has disabled javascript on this page. For a better user experience, please turn it back on as we utilize javascript heavily for stylization and navigation.</noscript>
+		<main class="container">
+			<section class="col-12">
+				<div class="row">
+					<div class="column">
+						<a href="/hero"><img class="link class-image" id="hero" src="images/hero_comp.png" alt="Hero" ></a>
+						<h3>Hero is a scion class skilled at engaging multiple enemies at once. Heroes can wield three types of weapons: Swords, Twin Machine Guns, and Talises.</h3>
+					</div>
+					<div class="column">
+						<a href="/phantom"><img class="link class-image" id="phantom" src="images/phantom_comp.png" alt="Phantom"></a>
+						<h3>Phantom is a scion class which features both a wide array of different attacks as well as superior dodging ability. The class is capable of equipping three different weapons types: Rod, Katana, and Rifle.</h3>
+					</div>
+					<div class="column">
+						<a href="/etoile"><img class="link class-image" id="etoile" src="images/etoile_comp.png" alt="Etoile"></a>
+						<h3>Etoile is a scion class specializing in defense and support skills. They are capable of equipping Double Sabers, Soaring Blades, and Wands.</h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="column">
+						<img src="images/Left.png" class="class-image" alt="Don't click me!">
+					</div>
+					<div class="column">
+						<a href="/luster"><img class="link class-image" id="luster" src="images/Luster.png" alt="Luster"></a>
+						<h3>Luster is an inherently agressive class with it's own unique mechanics, and a bit complicated and different from the other classes. It uses only Gunblades, but 3 different styles/types. <A HREF="https://www.pixiv.net/en/artworks/85641860">(Original artwork can be found here)</A></h3>
+					</div>
+					<div class="column">
+						<a href="http://discord.gg/PSO2"><img class="link class-image" src="images/Right.png" alt="You can click me, though!"></a>
+					</div>
+				</div>
+			</section>
+		</main>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+		<script>
+		$(function() {
+				$("#hero").hover(
+					function() {
+						$(this).attr("src", "images/hero_comp.gif");
+					},
+					function() {
+						$(this).attr("src", "images/hero_comp.png");
+					}                         
+				);                  
+			});
+		</script>
+		<script>
+		$(function() {
+				$("#phantom").hover(
+					function() {
+						$(this).attr("src", "images/phantom_comp.gif");
+					},
+					function() {
+						$(this).attr("src", "images/phantom_comp.png");
+					}                         
+				);                  
+			});
+		</script>
+		<script>
+		$(function() {
+				$("#etoile").hover(
+					function() {
+						$(this).attr("src", "images/etoile_comp.gif");
+					},
+					function() {
+						$(this).attr("src", "images/etoile_comp.png");
+					}                         
+				);                  
+			});
+		</script>
+	</body>
 </html>
