--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 		<meta property="og:url" content="https://aida-enna.github.io/">
 		<meta property="og:title" content="PSO2 Scion Class Guides">
 		<meta property="og:description" content="Guides dedicated to the Scion classes for Phantasy Star Online 2 - NA and JP!">
-		<meta property="og:image" content="https://aida-enna.github.io/images/apple-touch-icon.png">
+		<meta property="og:image" content="https://aida-enna.github.io/images/titlecard.png">
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://aida-enna.github.io/">
 		<meta property="twitter:title" content="PSO2 Scion Class Guides">
 		<meta property="twitter:description" content="Guides dedicated to the Scion classes for Phantasy Star Online 2 - NA and JP!">
-		<meta property="twitter:image" content="https://aida-enna.github.io/images/apple-touch-icon.png">
+		<meta property="twitter:image" content="https://aida-enna.github.io/images/titlecard.png">
 		<title>Select a class!</title>
 		<link rel="icon" type="image/png" href="images/favicon.ico"/>
-		<link rel="apple-touch-icon" href="images/apple-touch-icon.png"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<link href="css/style.css" rel="stylesheet">
