--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="twitter:image" content="https://aida-enna.github.io/images/titlecard.png">
 		<title>Select a class!</title>
 		<link rel="icon" type="image/png" href="images/favicon.ico"/>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<link href="css/style.css" rel="stylesheet">
@@ -54,7 +54,7 @@
 			<div class="container">
 				<span class="text-muted">
 					<ul class="list-inline">
-						<li class="list-inline-item"><i class="fab fa-discord"></i>&nbsp;<a class="text-decoration-none text-muted" href="https://discord.com/pso2" target="_blank">Discord</a></li>
+						<li class="list-inline-item"><i class="fab fa-discord"></i>&nbsp;<a class="text-decoration-none text-muted" href="https://discord.gg/pso2" target="_blank">Discord</a></li>
 						<li class="list-inline-item"><i class="fab fa-github"></i>&nbsp;<a class="text-decoration-none text-muted" href="https://github.com/Aida-Enna" target="_blank">GitHub</a></li>
 						<li class="list-inline-item"><i class="fab fa-youtube"></i>&nbsp;<a class="text-decoration-none text-muted" href="https://www.youtube.com/channel/UCImB9hwNPdd5xH_QuFYE7jA" target="_blank">YouTube</a></li>
 					</ul>
