--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="luster/"><img class="link class-image" id="luster" src="images/Luster.png" alt="Luster"></a>
-					<h3>Luster is an inherently agressive class with it's own unique mechanics. It uses only Gunblades, but 3 different styles/types. <A HREF="https://www.pixiv.net/en/artworks/85641860">(Original artwork)</A></h3>
+					<h3>Luster is an inherently agressive class with it's own unique mechanics. It uses only Gunblades, but 3 different styles/types. (<A HREF="https://www.pixiv.net/en/artworks/85641860">Original artwork</A>)</h3>
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="http://discord.gg/PSO2"><img class="link class-image" src="images/Right.png" alt="You can click me, though!"></a>
