--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 			<div class="row">
 				<section class="col-xs-12 col-md-4 column">
 					<a href="hero/"><img class="link class-image" id="hero" src="images/hero_comp.png" alt="Hero" ></a>
-					<h3>Hero is a scion class skilled at engaging multiple enemies at once. Heroes can wield three types of weapons: Swords, Twin Machine Guns, and Talises.</h3>
+					<h3 style="font-size:1.5vw;">Hero is a scion class skilled at engaging multiple enemies at once. Heroes can wield three types of weapons: Swords, Twin Machine Guns, and Talises.</h3>
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="phantom/"><img class="link class-image" id="phantom" src="images/phantom_comp.png" alt="Phantom"></a>
-					<h3>Phantom is a scion class with a wide array of different attacks and superior dodging ability. They can equip three different weapons types: Rod, Katana, and Rifle.</h3>
+					<h3 style="font-size:1.5vw;">Phantom is a scion class with a wide array of different attacks and superior dodging ability. They can equip three different weapons types: Rod, Katana, and Rifle.</h3>
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="etoile/"><img class="link class-image" id="etoile" src="images/etoile_comp.png" alt="Etoile"></a>
-					<h3>Etoile is a scion class specializing in defense and support skills. They are capable of equipping Double Sabers, Soaring Blades, and Wands.</h3>
+					<h3 style="font-size:1.5vw;">Etoile is a scion class specializing in defense and support skills. They are capable of equipping Double Sabers, Soaring Blades, and Wands.</h3>
 				</section>
 			</div>
 			<div class="row">
@@ -43,7 +43,7 @@
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="luster/"><img class="link class-image" id="luster" src="images/Luster.png" alt="Luster"></a>
-					<h3>Luster is an inherently agressive class with it's own unique mechanics. It uses only Gunblades, but 3 different styles/types. (<A HREF="https://www.pixiv.net/en/artworks/85641860">Original artwork</A>)</h3>
+					<h3 style="font-size:1.5vw;">Luster is an inherently agressive class with it's own unique mechanics. It uses only Gunblades, but 3 different styles/types. (<A HREF="https://www.pixiv.net/en/artworks/85641860">Original artwork</A>)</h3>
 				</section>
 				<section class="col-xs-12 col-md-4 column">
 					<a href="http://discord.gg/PSO2"><img class="link class-image" src="images/Right.png" alt="You can click me, though!"></a>
