--- a/index_mobile.html
+++ b/index_mobile.html
@@ -22,7 +22,7 @@
 		<script type="text/javascript">
 		<!--
 		if (screen.width <= 699) {
-		document.location = "index_mobile.html";
+		document.location = "mobile.html";
 		}
 		//-->
 		</script>
