--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript">
-		<!--
+		<!--<script type="text/javascript">
+		
 		if (screen.width <= 699) {
 		document.location = "index_mobile.html";
 		}
-		//-->
-		</script>
+		//
+		</script>-->
 	</head>
 	<body>
 		<noscript>Your browser has disabled javascript on this page. For a better user experience, please turn it back on as we utilize javascript heavily for stylization and navigation.</noscript>
