--- a/luster/index.html
+++ b/luster/index.html
@@ -145,7 +145,7 @@
 					
 					<p>Baran style's Photon Cluster is activated by performing a Just Guard (guarding the moment an attack is about to hit you). Keep in mind that this means attacking using a Normal Attack or Stay Arts, since those are how this class guards. This surrounds you with metal mario shield bits from Gundam 00 and decreases your damage taken by 25%.</p>
 					
-					<p>Baran's Quick Shoot is activated by doing a counter while holding forwards or backwards, then using your Weapon Action after a slight delay. It fires a very quick shot of ice that has a long range.</p>
+					<p>Baran's Quick Shoot is activated by doing a counter, then using your Weapon Action after a slight delay. It fires a very quick shot of ice that has a long range.</p>
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/SX2Q8wjfsdw" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div><br>
