--- a/luster/index.html
+++ b/luster/index.html
@@ -271,6 +271,8 @@
 					<div class="mr-auto w-50">
 						<h3 class="boldtitlelarge mr-auto"><a id="changelog"></a>Changelog</h3>
 					</div><br>
+						<span class="boldtitlesmall">February 3rd, 2021</span><br>
+							Fixed some issues, added NA terms (with JP toggle). Enjoy!<br><br></span>
 						<span class="boldtitlesmall">December 1st, 2020</span><br>
 							All finished! Guide is public! Time to <strike>rest</strike> work on other stuff.<br><br></span>
 						<span class="boldtitlesmall">November 30th, 2020</span><br>
