--- a/luster/index.html
+++ b/luster/index.html
@@ -138,7 +138,7 @@
 					
 					<p>Fomel style's Photon Cluster is activated by doing two different Photon Arts back to back, but doing the second one the moment the <span data-translate="Perfect Attack">Perfect Attack</span> window appears. This surrounds you with... <strike>things</strike> <strike>blades</strike> <strike>photons</strike> bits from Gundam that do damage in an AOE and restore 5 PP with each hit.</p>
 					
-					<p>Fomel's <span data-translate="Quick Shoot">Quick Shoot</span> is activated by doing an <span data-translate="Enhance Art">Enhance Art</span>, then another one (holding the button again to consume another <span data-translate="focus">focus</span> gauge), then pressing the Weapon Action after a short delay. It jumps you towards your enemy while slamming them with your Gunblade, like the Stinger move from Devil May Cry.</p>
+					<p>Fomel's <span data-translate="Quick Shoot">Quick Shoot</span> is activated by doing an Enhanced Combo - two Enhanced Arts back to back (while performing an enhanced art, press the PA button again when you have a <span data-translate="focus">focus</span> gauge) - followed by pressing Weapon Action after a minor delay. It jumps you towards your enemy while slamming them with your Gunblade, like the Stinger move from Devil May Cry.</p>
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/Ol3V9_CmFvA" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div><br>
