Fixing the WA inaccuracy for Phantom

--- a/phantom/index.html
+++ b/phantom/index.html
@@ -92,7 +92,7 @@
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/TmHuSQ8ngbk" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div><br>
-					<img src="images/katana.png"><b>Katana</b>: While everyone else was goofing off, you were studying the blade - and it shows! Aside from unique animations, Katana largely plays the same. Your weapon action is a ranged slash, which can be charged for more damage.
+					<img src="images/katana.png"><b>Katana</b>: While everyone else was goofing off, you were studying the blade - and it shows! Aside from unique animations, Katana largely plays the same. Your weapon action is a ranged slash.
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/iqH7PZvaVzk" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div><br>
